# my_tg_bot_for_render

./: .gitignore  Makefile  build.sh  constraints.txt  pyproject.toml  small-talk-wqio-87a7338a8d59.json
bot/: __init__.py  app.py
